# rust-manager

./: .gitignore  Cargo.toml  Containerfile  DEVCONTAINER_TROUBLESHOOTING.md  Dioxus.toml  README.md  outline.md  package-lock.json  package.json  prompt.md  prompt2.md  prompt3.md  prompt4.md  prompt5.md  readme.md
.devcontainer/: PODMAN_SETUP.md  devcontainer.json  on_create.sh  post_create.sh
assets/: main.css  tailwind.css
src/: dashboard.rs  main.rs
src/api/: mod.rs
src/backend/: api.rs  auth_session.rs  axum_server.rs  db.rs  domain.rs  mod.rs  model.rs  router.rs  server_functions.rs  session.rs
src/components/: dashboard.rs  domain.rs  login.rs  mod.rs  register.rs  user.rs  wizard.rs
src/wizard/: mod.rs
