[package]
name = "rust-manager"
version = "0.1.0"
authors = ["mike"]
edition = "2021"

[dependencies]
dioxus = { version = "0.6.2", features = ["router", "fullstack"] }
dioxus-fullstack = "0.6.2"
tokio = { version = "1.20.0", features = ["full"], optional = true }
sqlx = { version = "0.7.0", features = [
  "sqlite",
  "runtime-tokio",
  "tls-native-tls",
], optional = true }
axum_session = { version = "0.12.1", features = [
  "sqlite-rustls",
], optional = true }
axum_session_auth = { version = "0.12.1", features = [
  "sqlite-rustls",
], optional = true }
axum = { version = "0.7.0", optional = true }
bcrypt = { version = "0.16.0", optional = true }
async-trait = { version = "0.1.87", optional = true }
anyhow = { version = "1.0.97", optional = true }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
virt = { version = "0.4.3", optional = true } # Added for libvirt integration

[features]
default = []
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = [
  "dioxus/server",
  "dep:tokio",
  "sqlx",
  "axum_session",
  "axum_session_auth",
  "axum",
  "bcrypt",
  "async-trait",
  "anyhow",
  "virt",
]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
